--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,7 +9,7 @@ body {
 }
 h1 {
   background-color: blueviolet;
-  color: blanchedalmond;
+  color: rgb(255, 246, 205);
   font-size: x-large;
   text-align: center;
 }
@@ -18,4 +18,13 @@ h2 {
   color: black;
   font-size: large;
   text-align: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+p {
+  text-align: center;
+  background-color: rgb(223, 181, 119);
+  color: blueviolet;
+  font-size: medium;
+  font-family: "Courier New", Courier, monospace;
 }
