--- a/css/estiloso.css
+++ b/css/estiloso.css
@@ -11,3 +11,10 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+h2 {
+  background-color: aquamarine;
+  color: blueviolet;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: larger;
+  text-align: center;
+}
